Avoid break inside menu sections and "NEW" styling

--- a/src/style.css
+++ b/src/style.css
@@ -265,6 +265,7 @@ li > button:active{
 .menu-items-section{
     display: grid;
     gap: 16px;
+    break-inside: avoid; /* Prevents the item from breaking across columns */
     margin-bottom: 50px;
 }
 
@@ -292,10 +293,16 @@ li > button:active{
 
 .menu-item-description{
     font-size: 1rem;
+    color: rgb(198, 198, 198);
 }
 
 .menu-item-price{
     font-size: 2.2rem;
     font-weight: bold;
     justify-self: end;
+}
+
+.new{
+    border-left: 2px solid var(--color-accent-low);
+    background-color: var(--color-accent-low);
 }
